# voxel_renderer

./: .clang-format  .gitmodules  CMakeLists.txt
include/microcompute/: microcompute.h
shader/: iteration.glsl  output.glsl  renderer.glsl
src/: lib_impl.c  main.c  vector.h
src/config/: config_reader.c  config_reader.h  generic_parser.c  generic_parser.h
src/logger/: logger.c  logger.h
src/lua/: lua_extra.c  lua_extra.h
src/renderer/: renderer.c  renderer.h  shader_code.c  shader_code.h  shader_compiler.c  shader_compiler.h
src/vector/: vector.h
src/world/: camera.c  camera.h  material.c  material.h  scene.c  scene.h  voxel.c  voxel.h
test/: main.lua
